parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comments.snap
---
source: parser/src/parser/parser.rs
description: "# a\n# a\n\n# a\n# b\ndef a(): ... # a\n\ndef b():\n    # a\n    ... # a\n\n# this is a comment only line\n"
---
Module {
    node: Node {
        start: 0,
        end: 95,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 17,
                    end: 34,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 23,
                        end: 23,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    ExpressionStatement(
                        Constant(
                            Constant {
                                node: Node {
                                    start: 26,
                                    end: 33,
                                },
                                value: ...,
                            },
                        ),
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 35,
                    end: 95,
                },
                name: "b",
                args: Arguments {
                    node: Node {
                        start: 41,
                        end: 41,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    ExpressionStatement(
                        Constant(
                            Constant {
                                node: Node {
                                    start: 56,
                                    end: 63,
                                },
                                value: ...,
                            },
                        ),
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
    ],
}
