parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comparison-2.snap
---
source: parser/src/parser/parser.rs
description: a != b
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            Compare(
                Compare {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    left: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    ops: [
                        NotEq,
                    ],
                    comparators: [
                        Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
