parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__complete@indentation.py.snap
---
source: parser/src/parser/parser.rs
description: "# Unindent does not match any outer indentation level\nif True:\n        pass\n    pass\n"
input_file: parser/test_data/inputs/indentation.py
---
Module {
    node: Node {
        start: 0,
        end: 85,
    },
    body: [
        IfStatement(
            If {
                node: Node {
                    start: 54,
                    end: 85,
                },
                test: Constant(
                    Constant {
                        node: Node {
                            start: 57,
                            end: 61,
                        },
                        value: Bool(
                            true,
                        ),
                    },
                ),
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 71,
                                end: 75,
                            },
                        },
                    ),
                    Pass(
                        Pass {
                            node: Node {
                                start: 80,
                                end: 84,
                            },
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
