parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__dict-5.snap
---
source: parser/src/parser/parser.rs
description: "{a: b,\n            }"
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        ExpressionStatement(
            Dict(
                Dict {
                    node: Node {
                        start: 0,
                        end: 20,
                    },
                    keys: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                    ],
                    values: [
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
